--- a/src/test/resources/datasource.properties
+++ b/src/test/resources/datasource.properties
@@ -1,5 +1,5 @@
-jdbcUrl=jdbc:h2:~/OK;INIT=RUNSCRIPT FROM 'src/test/resources/SCHEMA.sql'\\; RUNSCRIPT FROM 'src/test/resources/ENTRIES.sql';
-driverClassName=org.h2.Driver
+jdbcUrl=jdbc:h2:~/mem;INIT=RUNSCRIPT FROM 'src/test/resources/script.sql';
+#driverClassName=org.h2.Driver
 username=root
 password=admin
 dataSource.cachePrepStmts=true
