HTTP error pages

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,21 +5,21 @@
 	version="3.0">
 	<display-name>computer-database</display-name>
 
-	<!-- <welcome-file-list>
-		<welcome-file>/dashboard.jsp</welcome-file>
+	<welcome-file-list>
+		<welcome-file>dashboard</welcome-file>
 	</welcome-file-list>
 
 	<error-page>
-		<error-code>404</error-code>
-		<location>/404.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>403</error-code>
-		<location>/404.jsp</location>
-	</error-page>
-	<error-page>
-		<error-code>500</error-code>
-		<location>/500.jsp</location>
-	</error-page> -->
+		<error-code>404</error-code> 
+		<location>/views/404.html</location> 
+	</error-page> 
 
+
+	<!-- <error-page>
+	 <error-code>404</error-code> 
+	 <location>/404.jsp</location> 
+		</error-page> 
+		<error-page> <error-code>403</error-code> <location>/404.jsp</location> 
+		</error-page> <error-page> <error-code>500</error-code> <location>/500.jsp</location> 
+		</error-page> -->
 </web-app>
