Jquery front validation

--- a/pom.xml
+++ b/pom.xml
@@ -10,21 +10,18 @@
 
 
 	<properties>
+		<maven.compiler.source>1.7</maven.compiler.source>
+		<maven.compiler.target>1.7</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit-version>4.11</junit-version>
 		<mysql-version>8.0.20</mysql-version>
 		<slf4j-api-version>1.7.30</slf4j-api-version>
 		<slf4j-version>1.7.30</slf4j-version>
 		<h2database-version>1.4.197</h2database-version>
-		<HikariCP-version>
-			3.4.5
-		</HikariCP-
-			version>
-			<servlet-version>4.0.1</servlet-version>
-			<jstl-version>1.2</jstl-version>
-			<taglibs-version>1.1.2</taglibs-version>
-			<maven.compiler.source>1.7</maven.compiler.source>
-			<maven.compiler.target>1.7</maven.compiler.target>
+		<HikariCP-version>3.4.5</HikariCP-version>
+		<servlet-version>4.0.1</servlet-version>
+		<jstl-version>1.2</jstl-version>
+		<taglibs-version>1.1.2</taglibs-version>
 	</properties>
 
 
@@ -85,8 +82,7 @@
 			<artifactId>standard</artifactId>
 			<version>${taglibs-version}</version>
 		</dependency>
-
-
+		
 	</dependencies>
 
 </project>
