--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,10 @@
 		<servlet-version>4.0.1</servlet-version>
 		<jstl-version>1.2</jstl-version>
 		<taglibs-version>1.1.2</taglibs-version>
+		<taglibs-version>1.1.2</taglibs-version>
+		<spring-core-version>5.2.6.RELEASE</spring-core-version>
+		<spring-web-version>5.2.6.RELEASE</spring-web-version>
+		<spring-context-version>5.2.6.RELEASE</spring-context-version>
 	</properties>
 
 
@@ -82,7 +86,25 @@
 			<artifactId>standard</artifactId>
 			<version>${taglibs-version}</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${spring-core-version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${spring-web-version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>${spring-context-version}</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
