--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<junit-version>4.11</junit-version>
+		<junit-version>4.12</junit-version>
 		<mysql-version>8.0.20</mysql-version>
 		<slf4j-api-version>1.7.30</slf4j-api-version>
 		<slf4j-version>1.7.30</slf4j-version>
@@ -26,6 +26,7 @@
 		<spring-core-version>5.2.6.RELEASE</spring-core-version>
 		<spring-web-version>5.2.6.RELEASE</spring-web-version>
 		<spring-context-version>5.2.6.RELEASE</spring-context-version>
+		<spring-test-version>5.2.6.RELEASE</spring-test-version>
 	</properties>
 
 
@@ -103,6 +104,13 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring-context-version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring-test-version}</version>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
