--- a/pom.xml
+++ b/pom.xml
@@ -22,11 +22,7 @@
 		<jstl-version>1.2</jstl-version>
 		<taglibs-version>1.1.2</taglibs-version>
 		<taglibs-version>1.1.2</taglibs-version>
-		<spring-core-version>5.2.6.RELEASE</spring-core-version>
-		<spring-web-version>5.2.6.RELEASE</spring-web-version>
-		<spring-context-version>5.2.6.RELEASE</spring-context-version>
-		<spring-test-version>5.2.6.RELEASE</spring-test-version>
-		<spring-jdbc-version>5.2.6.RELEASE</spring-jdbc-version>
+		<org.springframework-version>5.2.6.RELEASE</org.springframework-version>
 	</properties>
 
 
@@ -87,38 +83,23 @@
 			<artifactId>standard</artifactId>
 			<version>${taglibs-version}</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>${spring-core-version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>${spring-web-version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>${spring-context-version}</version>
-		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
-			<version>${spring-test-version}</version>
+			<version>${org.springframework-version}</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>${spring-jdbc-version}</version>
+			<version>${org.springframework-version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
