--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,20 +6,22 @@
 	<display-name>computer-database</display-name>
 
 	<welcome-file-list>
-		<welcome-file>dashboard</welcome-file>
+		<welcome-file>welcome.jsp</welcome-file>
 	</welcome-file-list>
 
 	<error-page>
-		<error-code>404</error-code> 
-		<location>/views/404.html</location> 
-	</error-page> 
+		<error-code>404</error-code>
+		<location>/views/404.jsp</location>
+	</error-page>
 
+	<error-page>
+		<error-code>403</error-code>
+		<location>/views/403.jsp</location>
+	</error-page>
 
-	<!-- <error-page>
-	 <error-code>404</error-code> 
-	 <location>/404.jsp</location> 
-		</error-page> 
-		<error-page> <error-code>403</error-code> <location>/404.jsp</location> 
-		</error-page> <error-page> <error-code>500</error-code> <location>/500.jsp</location> 
-		</error-page> -->
+	<error-page>
+		<error-code>500</error-code>
+		<location>/views/500.jsp</location>
+	</error-page>
+
 </web-app>
