--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,9 @@
 		<taglibs-version>1.1.2</taglibs-version>
 		<taglibs-version>1.1.2</taglibs-version>
 		<org.springframework-version>5.2.6.RELEASE</org.springframework-version>
+		<spring-data-jpa-version>2.3.1.RELEASE</spring-data-jpa-version>
+		<hibernate-version>5.4.10.Final</hibernate-version>
+
 	</properties>
 
 
@@ -100,6 +103,19 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${org.springframework-version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>${hibernate-version}</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-jpa</artifactId>
+			<version>${spring-data-jpa-version}</version>
+		</dependency>
+
 	</dependencies>
 
 </project>
