--- a/service/pom.xml
+++ b/service/pom.xml
@@ -18,6 +18,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<spring-security-core-version>5.3.3.RELEASE</spring-security-core-version>
 	</properties>
 
 	<dependencies>
@@ -26,6 +27,13 @@
 			<artifactId>persistence</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>${spring-security-core-version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
