--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -22,6 +22,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<servlet-version>4.0.1</servlet-version>
 		<taglibs-version>1.1.2</taglibs-version>
+		<spring-security-web-version>5.3.3.RELEASE</spring-security-web-version>
 	</properties>
 
 	<dependencies>
@@ -43,6 +44,13 @@
 			<artifactId>standard</artifactId>
 			<version>${taglibs-version}</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${spring-security-web-version}</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
