--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -23,6 +23,7 @@
 		<servlet-version>4.0.1</servlet-version>
 		<taglibs-version>1.1.2</taglibs-version>
 		<spring-security-web-version>5.3.3.RELEASE</spring-security-web-version>
+		<spring-security-web-version>5.3.3.RELEASE</spring-security-web-version>
 	</properties>
 
 	<dependencies>
@@ -50,7 +51,12 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>${spring-security-web-version}</version>
 		</dependency>
-
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+			<version>${spring-security-web-version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
